<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_flights"
        android:icon="@drawable/ic_flights"
        android:title="@string/title_flights" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotels"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_briefly"
        android:icon="@drawable/ic_briefly"
        android:title="@string/title_briefly" />
    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_subscription"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>