<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_flights">

    <fragment
        android:id="@+id/navigation_flights"
        android:name="com.example.ticketselling.presentation.flights.main.MainFragment"
        android:label="@string/title_flights"
        tools:layout="@layout/fragment_flights" >
        <action
            android:id="@+id/action_navigation_flights_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_hotels"
        android:name="com.example.ticketselling.presentation.hotels.HotelsFragment"
        android:label="@string/title_hotels"
        tools:layout="@layout/fragment_hotels" />

    <fragment
        android:id="@+id/navigation_briefly"
        android:name="com.example.ticketselling.presentation.briefly.BrieflyFragment"
        android:label="@string/title_briefly"
        tools:layout="@layout/fragment_briefly" />
    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.ticketselling.presentation.hotels.HotelsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ticketselling.presentation.briefly.BrieflyFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.ticketselling.presentation.flights.search.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_navigation_flights"
            app:destination="@id/navigation_flights" />
        <action
            android:id="@+id/action_searchFragment_to_tipsFragment"
            app:destination="@id/tipsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_countrySelectedFragment"
            app:destination="@id/countrySelectedFragment" />
    </fragment>
    <fragment
        android:id="@+id/tipsFragment"
        android:name="com.example.ticketselling.presentation.flights.tips.TipsFragment"
        android:label="TipsFragment" >
        <action
            android:id="@+id/action_tipsFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/countrySelectedFragment"
        android:name="com.example.ticketselling.presentation.flights.countryselected.CountrySelectedFragment"
        android:label="CountrySelectedFragment" >
        <action
            android:id="@+id/action_countrySelectedFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_countrySelectedFragment_to_ticketsFragment"
            app:destination="@id/ticketsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ticketsFragment"
        android:name="com.example.ticketselling.presentation.flights.alltickets.TicketsFragment"
        android:label="TicketsFragment" >
        <action
            android:id="@+id/action_ticketsFragment_to_countrySelectedFragment"
            app:destination="@id/countrySelectedFragment" />
    </fragment>
</navigation>